--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
     "css-loader": "0.28.9",
     "fork-ts-checker-webpack-plugin": "4.1.6",
     "html-webpack-plugin": "3.2.0",
+    "less-loader": "6.2.0",
     "style-loader": "0.19.1",
-    "stylus": "0.54.5",
-    "stylus-loader": "3.0.2",
     "ts-loader": "7.0.5",
     "typescript": "3.9.5",
     "webpack": "4.29.0",
