--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,12 @@
       "jsx": "react",
       "allowJs": true,
       "moduleResolution": "node",
-      "allowSyntheticDefaultImports": true
+      "allowSyntheticDefaultImports": true,
+      "baseUrl": "./",
+      "paths": {
+        "@src/*": ["src/*"],
+        "@Table/*": ["src/Table/*"]
+      }
   },
   "includes": [
     "./src/",
