--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
   },
   "homepage": "https://github.com/Yixian15/re-table#readme",
   "dependencies": {
-    "react": "16.7.0",
-    "react-dom": "16.7.0"
+    "@types/classnames": "2.2.10",
+    "@types/lodash": "4.14.157",
+    "@types/react": "16.9.36",
+    "@types/react-dom": "16.9.8",
+    "classnames": "2.2.6",
+    "lodash": "4.17.19",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
     "@babel/preset-env": "7.2.3",
     "@babel/preset-react": "7.0.0",
-    "@types/react": "16.9.36",
-    "@types/react-dom": "16.9.8",
     "@types/webpack": "4.41.17",
     "babel-loader": "8.0.5",
-    "css-loader": "0.28.9",
+    "css-loader": "3.6.0",
     "fork-ts-checker-webpack-plugin": "4.1.6",
     "html-webpack-plugin": "3.2.0",
     "less-loader": "6.2.0",
